--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "cugr/ncbiwrapper",
     "description": "php web wrappers for scraping free public biology database",
+    "keywords": ["ncbi","pubmed","wrapper","EST"],
+    "homepage": "https://github.com/liub1993/BioWrapper.git",
     "license": "MIT",
     "authors": [
         {
@@ -8,7 +10,9 @@
             "email": "598604711@qq.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.3.0"
+    },
     "autoload": {
         "psr-4":{
             "BioWrapper\\": "src/BioWrapper"
