--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cugr/biowrapper",
+    "name": "cugr/bioscraper",
     "description": "php web wrappers for scraping free public biology database",
     "keywords": ["ncbi","pubmed","wrapper","EST"],
     "homepage": "https://github.com/liub1993/BioWrapper.git",
@@ -15,7 +15,7 @@
     },
     "autoload": {
         "psr-4":{
-            "BioWrapper\\": "src/BioWrapper"
+            "BioWrapper\\": "src/BioScraper"
         }
     }
 }
